<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#223A9F44"
    android:updatePeriodMillis="500"
    android:padding="@dimen/widget_margin">


        <ImageView
            android:id="@+id/img_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />
        <ImageView
            android:id="@+id/img_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_time"
            android:text="@string/date" />

        <ImageView
            android:id="@+id/img_business_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_date"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/business_name_en"
            android:textAlignment="center"
            android:textColor="#3A9F44"
            android:textSize="25sp"
            android:typeface="normal" />

        <!--TextView
            android:id="@+id/appwidget_text_001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"

            android:layout_marginRight="8dp"
            android:background="#3A9F44"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/business_name_en"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="normal" /-->

        <TextView
            android:id="@+id/appwidget_text_002"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_business_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/contact_phone"
            android:textAlignment="center"
            android:textColor="#3A9F44"
            android:textSize="35sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="end|center_vertical|center_horizontal"
            android:text="@string/my_brand"
            android:textColor="#3A9F44"
            android:textSize="15dp"
            android:typeface="normal" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType = "fitXY"
            />

</RelativeLayout>